objects/Salesforce_Product_Box_Mapping__mdt/Salesforce_Product_Box_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Salesforce Product Box Mapping</label>
    <pluralLabel>Salesforce Product Box Mappings</pluralLabel>
</CustomObject>