objects/Salesforce_Product_Box_Mapping__mdt/fields/Box_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Box_Folder_ID__c</fullName>
    <label>Box Folder ID</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>