objects/Salesforce_Product_Box_Mapping__mdt/fields/Box_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Box_Product_Name__c</fullName>
    <label>Box Product Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>