objects/Salesforce_Product_Box_Mapping__mdt/fields/Salesforce_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Product_Name__c</fullName>
    <label>Salesforce Product Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>